[tool.poetry]
name = "stock-sense"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.3.0"
dash = "^2.14.1"
dash-bootstrap-components = "^1.5.0"
general-cache = "^0.1.1"
gunicorn = "^21.2.0"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
